--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "engines":{
-    "node":"21.3.0"
+  "engines": {
+    "node": "21.3.0"
   },
   "name": "major-project",
   "version": "1.0.0",
@@ -23,6 +23,7 @@
     "express-session": "^1.18.1",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
